<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/appearance_header">

        <ListPreference
            android:key="pref_colour_scheme"
            android:title="@string/color_title"
            android:summary="@string/color_summary"
            android:entries="@array/colour_entries"
            android:entryValues="@array/colour_values"
            android:defaultValue="@string/default_color"/>

        <CheckBoxPreference
            android:key="pref_toggle_ani"
            android:title="@string/toggle_ani"
            android:summary="@string/toggle_ani_summary_off"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/location_header">
        <Preference
            android:key="pref_blacklist"
            android:title="@string/blacklist_title"
            android:summary="@string/blacklist_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.wlu.cp470.group12.mapspin"
                android:targetClass="com.wlu.cp470.group12.mapspin.BlacklistActivity" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="Miscellaneous">
        <Preference
            android:key="pref_notes"
            android:title="@string/note_title"
            android:summary="@string/note_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Information">
        <Preference
            android:key="pref_help"
            android:title="@string/help_title"
            android:summary="@string/help_summary" />

        <Preference
            android:key="pref_about"
            android:title="@string/about_title"
            android:summary="@string/about_summary"/>
    </PreferenceCategory>

</PreferenceScreen>
